@@ -1,3 +1,8 @@
+2011-02-10 Heath Harrelson <heath.harrelson@gmail.com>
+	* flexo_archives_widget.php: Use WP_PLUGIN_URL constant to build
+		the script URL instead of determining it ourselves. The 
+		old way was only required for old versions of WordPress.
+
 2011-02-09 Heath Harrelson <heath.harrelson@gmail.com>
 	Tag version 2.0.1
 
